  * debian/in/octave2.1-00list: Include the above

  * debian/patches/50_octave-bug-tempfile.dpatch: In octave-bug, use
    Debian's tempfile(1) for enhanced security
  * debian/rules: Removed the Perl hack that used to implement the
    patch above

  * debian/patches/50_clean-pdf-docs: Clean PDF files in doc/ not cleaned
    by the maintainer-clean target

 --

octave2.1 (1:2.1.73-10) unstable; urgency=low

  * Regenerated octave2.1 packages for integrating the last changes
    regarding octave-depends
  * debian/patches/50_fixed-freqz.dpatch: Fix script/general/freqz.m,
    patch taken from upstream CVS (closes: #383097)

 -- Rafael Laboissiere <rafael@debian.org>  Tue, 15 Aug 2006 19:05:49 +0200

octave2.9 (2.9.7-2) unstable; urgency=low

  * debian/in/octave-depends:
    - Introduced substitution variables ${octave<major>:Depends}
    - Updated POD section accordingly
  * debian/rules: Create symlink for octave<major>-depends

 -- Rafael Laboissiere <rafael@debian.org>  Mon, 14 Aug 2006 15:10:09 +0200

octave2.9 (2.9.7-1) unstable; urgency=low

  [ Thomas Weber ]
  * New upstream release.  A bug in the path function has been fixed
    upstream allowing again this function to accept more than one argument
    (closes: #374943).
  * Removed patches (applied upstream)
    - 50_array-out-of-bounds-2.9
    - 50_desktop-category-no-space
    - 50_fix_path-2.9
  * debian/in/control: Bump compat level to 5; depend on debhelper >= 5

 -- Rafael Laboissiere <rafael@debian.org>  Sat, 12 Aug 2006 12:01:23 +0200

octave2.9 (2.9.6-4) unstable; urgency=low

  * debian/patches/50_desktop-category-no-space.dpatch: remove extraneous
    space character in the Categories filed.  This is needed when building
    the package with desktop-file-utils version 0.11-1.

 -- Rafael Laboissiere <rafael@debian.org>  Mon, 24 Jul 2006 14:42:21 +0200

octave2.1 (1:2.1.73-9) unstable; urgency=low

  [ Thomas Weber ]
  * Introduce mkoctfile<major> symlink: