@@ -15,6 +15,14 @@ octave2.1 (1:2.1.73-11) unstable; urgency=low
   * debian/patches/50_clean-pdf-docs: Clean PDF files in doc/ not cleaned
     by the maintainer-clean target
 
+  * debian/rules: Split the targets make, build, and install into
+    *-{arch,indep}.  With this change, only the files destined for
+    inclusion in the architecture dependent packages will be generated by
+    the autobuilders.
+  * debian/subdirs-vars.pl: Perl script for manipulating the SUBDIRS and
+    INSTALL_SUBDIRS variables in octMakefile, allowing the build/install
+    of the documentation files separately
+
  --
 
 octave2.1 (1:2.1.73-10) unstable; urgency=low
